<resources>
    <string name="app_name">SaveAir</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome, User</string>
    <string name="compare">Compare Prices</string>
    <string name="service">Airport Services</string>
    <string name="history">History</string>
    <string name="option">Settings</string>
    <string name="select">Search for an airport</string>
    <string name="hint">Airport Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="placeholder">Placeholder text here</string>
    <string name="location">Location:</string>
    <string name="description">Airport Lounge</string>
    <string name="placeholderLocation">AAA 111, BBB 222</string>
    <string name="speakTextRating">Rating bar</string>
    <string name="dutyFree">Duty free:</string>
    <string name="iconDescription">Placeholder image</string>
    <string name="placeholderName">Item</string>
    <string-array name="items">
        <item>Cigarettes</item>
        <item>Alcohol</item>
        <item>Other</item>
    </string-array>
    <string name="services">Other Services:</string>
    <string-array name="services">
        <item>Car Rental</item>
        <item>Hotels</item>
        <item>Taxi</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ticket_details">Ticket details page</string>
    <string name="ticket_info">Your ticket is …</string>
    <string name="ticket_price">than the average market price of $1000</string>
    <string name="other_tickets">Other tickets with similar conditions:</string>
    <string name="other_tickets_unavailable">To see other tickets with similar conditions, try again with future dates.</string>
    <string name="submit">Submit</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="enter_details_title">Enter your ticket details</string>
    <string name="price">Price</string>
    <string name="dateLabel">Date of Departure:</string>
    <string name="departureLabel">Departure At:</string>
    <string name="destinationLabel">Destination At:</string>
    <string name="at">At:</string>
    <string name="currency_label">Currency</string>
    <string-array name="currencies">
        <item>USD</item>
        <item>CAD</item>
        <item>Euro</item>
        <item>Yen</item>
    </string-array>
    <string name="class_label">Class</string>
    <string-array name="plane_classes">
        <item>First class</item>
        <item>Business class</item>
        <item>Premium economy</item>
        <item>Economy class</item>
    </string-array>
    <string name="stops">Stops</string>
    <string name="your_history">Your History</string>
    <string name="history_placeholder">No record to display</string>

    <string name="dialog_main_message">Select the Airport you %1$s at</string>
    <string name="comparison_heading_message">Your ticket at %1$s is…</string>
    <string name="comparison_result_message">than the average market price of %1$s</string>
    <string name="comparison_heading_unknown">Oops!</string>
    <string name="comparison_result_unknown">We couldn\'t find data to compare your ticket price…</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">cancel</string>
    <string name="preference_file_key">SaveAir</string>
    <string name="not_available">N/A</string>
    <string name="history_template">Your ticket at %1$s was %2$s than the average market price of %3$s.</string>
    <string name="reset">Reset</string>
    <string name="avatar">avatar</string>
    <string name="my_passport">My Passport</string>
    <string name="my_tickets">My Tickets</string>
    <string name="add_a_traveler">Add a Traveler</string>
    <string name="price_alerts">Price Alerts</string>
    <string name="user">User</string>
    <string name="log_out">Log out</string>

    <string name="link">Link</string>
</resources>