<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.compare.ViewTicketFragment">

        <TextView
            android:id="@+id/ticketComparisonHeadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="24sp"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/ticket_info" />

        <ImageView
            android:id="@+id/ticketComparisonResultImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Whether your ticket is cheaper or not" />

        <TextView
            android:id="@+id/ticketComparisonResultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/comparison_result_message" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="18sp"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/other_tickets" />

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/a" />

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/b" />

        <Button
            android:id="@+id/button3"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/c" />

</LinearLayout>