<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Airport">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewAirportName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/placeholder"
                android:textAlignment="center"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/description"
                android:src="@drawable/airport_lounge" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:contentDescription="@string/speakTextRating" />

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewLocationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/placeholderLocation" />

            <TextView
                android:id="@+id/textViewDutyFree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dutyFree"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewItems"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/textViewServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/services"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewServices"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:scrollbars="horizontal" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>