<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableLeftCompat="@drawable/ic_baseline_person_pin_24"
            android:textSize="30sp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_gravity="center"
            android:text="@string/user" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/my_passport"
            android:layout_marginTop="50dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textSize="30sp"
            android:layout_marginStart="30dp"
            app:drawableLeftCompat="@drawable/ic_baseline_info_24" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/my_tickets"
            android:layout_marginTop="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textSize="30sp"
            android:layout_marginStart="30dp"
            app:drawableLeftCompat="@drawable/ic_baseline_airplane_ticket_24" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/add_a_traveler"
            android:layout_marginTop="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textSize="30sp"
            android:layout_marginStart="30dp"
            app:drawableLeftCompat="@drawable/ic_baseline_people_24" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/price_alerts"
            android:textSize="30sp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            app:drawableLeftCompat="@drawable/ic_baseline_price_change_24" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out" />
    </TableRow>

</TableLayout>