<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAirportName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:text="@string/placeholder"
            android:textColor="?attr/colorOnSecondary"/>

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/location"
            android:layout_marginStart="30dp" />

        <TextView
            android:id="@+id/textViewLocationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/placeholderLocation"
            android:layout_marginStart="30dp"
            android:textColor="?attr/colorOnSecondary"/>

        <TextView
            android:id="@+id/textViewWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/website_label"
            android:layout_marginStart="30dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/link"
            android:id="@+id/buttonWebsiteCode"
            android:onClick="visitWebsite" />
    </LinearLayout>
</ScrollView>